<resources>
    <string name="app_name">Evanjelický spevník</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Zmeniť farebnú schému</string>
    <string name="title">Evanjelický spevník</string>
    <string name="song_detail_text">Ťuknutím na ikonku v rohu vyber číslo piesne.</string>
    <string name="antifony">Antifóny</string>
    <string name="antifony_pohrebne">Pohrebné antifóny</string>
    <string name="piesne">Piesne</string>
    <string name="spevnik">Spevník</string>
    <string name="pasie">Pašie</string>
    <string name="funebral">Funebrál</string>
    <string name="title_activity_main_navigation">Main_navigation</string>
    <string name="mute">Vypnúť zvonenie</string>
    <string name="vecera_panova">Večera pánova</string>
    <string name="predspevy">Predspevy</string>
    <string name="liturgia">Ďalšia liturgia</string>
    <string name="info">Informácie</string>
    <string name="choose_item">Vyber položku zo zoznamu</string>
    <string name="song_number">Číslo piesne</string>
    <string-array name="info_titles">
        <item>Štruktúra a navigácia</item>
        <item>Slovo autora</item>
    </string-array>
</resources>